--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 html {
   /* set 1rem to 10px instead of native 16px to make it easier to calculate font-size values for the rest of the page (e.g. 1.6rem is 16px, 2.0rem is 20px, etc.) */
   font-size: 62.5%;
-  margin: 0 auto;
 }
 
 body {
   font-size: 1.75rem;
   line-height: 1.4;
+  margin: .5rem 1rem;
 }
 
 h1,
@@ -61,4 +61,8 @@ a {
 
 .hidden {
   display: none;
+}
+
+.timer {
+  float: right;
 }
