--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,33 @@ a {
   color: inherit;
 }
 
-.hidden {
-  display: none;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 96%;
+  margin: 5%;
 }
 
 .timer {
   float: right;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  border-radius: 1rem;
+  box-shadow: .5rem .5rem 1.5rem rgba(0, 0, 0, 0.15);
+  padding: 3%;
+  max-width: 768px;
+}
+
+.card .heading {
+  margin-bottom: 2rem;
+}
+
+.hidden {
+  display: none;
 }
