--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,11 +67,7 @@ main {
   margin: 5%;
 }
 
-.timer {
-  float: right;
-}
-
-.card {
+section {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -82,8 +78,12 @@ main {
   max-width: 768px;
 }
 
-.card .heading {
+section .heading {
   margin-bottom: 2rem;
+}
+
+.timer {
+  float: right;
 }
 
 .hidden {
