--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,51 +2,17 @@
   box-sizing: border-box;
 }
 
-html {
-  /* set 1rem to 10px instead of native 16px to make it easier to calculate font-size values for the rest of the page (e.g. 1.6rem is 16px, 2.0rem is 20px, etc.) */
-  font-size: 62.5%;
-}
-
 body {
-  font-size: 1.75rem;
   line-height: 1.4;
   margin: .5rem 1rem;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: 0.625rem;
-  font-weight: 700;
-  line-height: 1.1;
-}
-
-h1 {
-  /* 4rem = 40px (4 * 10px) */
-  font-size: 4rem;
-}
-
-h2 {
-  font-size: 3.5rem;
-}
-
-h3 {
-  font-size: 3rem;
-}
-
-h4 {
-  font-size: 2.5rem;
-}
-
-h5 {
-  font-size: 2rem;
-}
-
-h6 {
-  font-size: 1.5rem;
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 3rem;
 }
 
 p {
@@ -74,7 +40,7 @@ section {
   align-items: center;
   border-radius: 1rem;
   box-shadow: .5rem .5rem 1.5rem rgba(0, 0, 0, 0.15);
-  padding: 3%;
+  padding: 2rem 2rem 1.25rem 2rem;
   max-width: 768px;
 }
 
@@ -88,4 +54,8 @@ section .heading {
 
 .hidden {
   display: none;
+}
+
+.alert {
+  margin-bottom: 0;
 }
