--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ section {
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
-  border-radius: 1rem;
+  border-radius: .5rem;
   box-shadow: .5rem .5rem 1.5rem rgba(0, 0, 0, 0.15);
   padding: 2rem 2rem 1.25rem 2rem;
   max-width: 768px;
