--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,12 +25,37 @@ a {
   color: inherit;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  margin-bottom: 0.625rem;
+  font-weight: 700;
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 96%;
-  margin: 5%;
+  margin: 0 auto;
 }
 
 section {
@@ -58,4 +83,5 @@ section .heading {
 
 .alert {
   margin-bottom: 0;
+  padding: .5rem .75rem;
 }
