--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,12 +65,16 @@ section {
   align-items: center;
   border-radius: .5rem;
   box-shadow: .25rem .25rem 1rem rgba(0, 0, 0, 0.15);
-  padding: 2rem 2rem 1.25rem 2rem;
+  padding: 2rem 1.5rem 1.25rem 1.5rem;
   max-width: 768px;
 }
 
 section .heading {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+section .desc {
+  margin-bottom: 1.5rem;
 }
 
 .timer {
