--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,8 @@ section {
   border-radius: .5rem;
   box-shadow: .25rem .25rem 1rem rgba(0, 0, 0, 0.15);
   padding: 2rem 1.5rem 1.25rem 1.5rem;
+  /* on mobile set width of section to 100% of body */
+  width: 100%;
   max-width: 768px;
 }
 
@@ -85,6 +87,7 @@ section .desc {
   display: none;
 }
 
+/* override bootstrap alert to reduce margin/padding to align better in header */
 .alert {
   margin-bottom: 0;
   padding: .5rem .75rem;
